fix problem: button can not  work on firefox

--- a/src/main.scss
+++ b/src/main.scss
@@ -111,7 +111,7 @@ p {
     }
 }
 
-button {
+.default-button {
     background: $primary;
     padding: 15px 20px;
     font-size: 1.7em;
